CMS GC settings template